--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <section class="content">
 <header>
   <img src="assets/images/image-omelette.jpeg" alt="simple omelette image">
-  <h1>Simple Omelette Recipe</h1> 
+  <h1>Hi Simple Omelette Recipe</h1> 
 </header>
 
 <section class="description">
